add data, update notebook

--- a/src/project.ipynb
+++ b/src/project.ipynb
@@ -2,48 +2,104 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "Empty DataFrame\nColumns: []\nIndex: []",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "import json\n",
+    "import geonamescache\n",
     "import pandas as pd\n",
+    "import numpy as np\n",
     "import re\n",
+    "import unidecode as unidecode\n",
     "\n",
     "\n",
-    "def get_country(headline):\n",
-    "    return '-'\n",
-    "\n",
-    "\n",
-    "city_regex = re.compile('[mM]iami [bB]each|[mM]iami')\n",
-    "def get_city(headline):\n",
-    "    city_found = city_regex.search(headline)\n",
-    "    if city_found:\n",
-    "        start, end = city_found.span()\n",
-    "        return city_found.group(0)\n",
-    "    return '-'\n",
-    "\n",
-    "\n",
-    "def get_headlines_df(headlines):\n",
-    "    columns = ['headline', 'country', 'city']\n",
-    "    headlines_df = pd.DataFrame([\n",
-    "        [headline,\n",
-    "         get_country(headline),\n",
-    "         get_city(headline)] for headline in headlines\n",
-    "    ])\n",
-    "    return headlines_df\n",
-    "\n",
-    "\n",
-    "def read_headlines(source):\n",
+    "def get_headlines(source):\n",
     "    with open(source) as handle:\n",
     "        for line in handle:\n",
-    "            yield line.strip('\\n')\n",
+    "            yield unidecode.unidecode(line.strip('\\n'))\n",
     "\n",
     "\n",
-    "df = get_headlines_df(read_headlines('../data/headlines.txt'))\n",
-    "\n"
+    "def find_match(text, regex):\n",
+    "    found = re.search(regex, text)\n",
+    "    if found:\n",
+    "        return found.group(0)\n",
+    "    return None\n",
+    "\n",
+    "\n",
+    "def get_city_name(headline, regex):\n",
+    "    return find_match(headline, regex)\n",
+    "\n",
+    "\n",
+    "def get_country_name(headline, regex):\n",
+    "    return find_match(headline, regex)\n",
+    "\n",
+    "gc = geonamescache.GeonamesCache()\n",
+    "countries = [country[\"name\"] for country in gc.get_countries().values()]\n",
+    "cities = [city[\"name\"] for city in gc.get_cities().values()]\n",
+    "\n",
+    "coutries_accent_map = {\n",
+    "    unidecode.unidecode(country): country for country in countries\n",
+    "}\n",
+    "\n",
+    "cities_accent_map = {\n",
+    "    unidecode.unidecode(city): city for city in cities\n",
+    "}\n",
+    "\n",
+    "unaccented_countries = set(coutries_accent_map.keys())\n",
+    "unaccented_cities = list(cities_accent_map.keys())\n",
+    "\n",
+    "unaccented_countries = sorted(unaccented_countries, key=lambda x: len(x), reverse=True)\n",
+    "unaccented_cities = sorted(unaccented_cities, key=lambda x: len(x), reverse=True)\n",
+    "\n",
+    "city_regex = r'\\b|\\b'.join(unaccented_cities)\n",
+    "country_regex = r'\\b|\\b'.join(unaccented_countries)\n",
+    "\n",
+    "headlines = get_headlines('../data/headlines.txt')\n",
+    "headlines_cities_countries = [\n",
+    "    dict(headline=headline,\n",
+    "         countries=get_country_name(headline, country_regex),\n",
+    "         cities=get_city_name(headline, city_regex)) for headline in headlines]\n",
+    "\n",
+    "with open('../data/headlines_cities_countries.json', 'w') as fout:\n",
+    "    fout.write(json.dumps(headlines_cities_countries))\n",
+    "\n",
+    "with open('../data/unaccented_countries.json', 'w') as fout:\n",
+    "    fout.write(json.dumps(unaccented_countries))\n",
+    "\n",
+    "with open('../data/unaccented_cities.json', 'w') as fout:\n",
+    "    fout.write(json.dumps(unaccented_cities))\n",
+    "\n",
+    "data = pd.read_json('../data/headlines_cities_countries.json')\n",
+    "data = data.replace({None: np.nan})\n",
+    "data.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
