--- a/src/project.ipynb
+++ b/src/project.ipynb
@@ -2,21 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
-    "collapsed": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "                                              headline country           city  \\\n645  Rumors about Rabies spreading in Jerusalem hav...     NaN      Jerusalem   \n646              More Zika patients reported in Indang     NaN         Indang   \n647  Suva authorities confirmed the spread of Rotav...     NaN           Suva   \n648         More Zika patients reported in Bella Vista     NaN    Bella Vista   \n649                     Zika Outbreak in Wichita Falls     NaN  Wichita Falls   \n\n    countrycode  latitude  longitude  \n645          IL  31.76904   35.21633  \n646          PH  14.19528  120.87694  \n647          FJ -18.14161  178.44149  \n648          US  36.48070  -94.27134  \n649          US  33.91371  -98.49339  ",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>headline</th>\n      <th>country</th>\n      <th>city</th>\n      <th>countrycode</th>\n      <th>latitude</th>\n      <th>longitude</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>645</th>\n      <td>Rumors about Rabies spreading in Jerusalem hav...</td>\n      <td>NaN</td>\n      <td>Jerusalem</td>\n      <td>IL</td>\n      <td>31.76904</td>\n      <td>35.21633</td>\n    </tr>\n    <tr>\n      <th>646</th>\n      <td>More Zika patients reported in Indang</td>\n      <td>NaN</td>\n      <td>Indang</td>\n      <td>PH</td>\n      <td>14.19528</td>\n      <td>120.87694</td>\n    </tr>\n    <tr>\n      <th>647</th>\n      <td>Suva authorities confirmed the spread of Rotav...</td>\n      <td>NaN</td>\n      <td>Suva</td>\n      <td>FJ</td>\n      <td>-18.14161</td>\n      <td>178.44149</td>\n    </tr>\n    <tr>\n      <th>648</th>\n      <td>More Zika patients reported in Bella Vista</td>\n      <td>NaN</td>\n      <td>Bella Vista</td>\n      <td>US</td>\n      <td>36.48070</td>\n      <td>-94.27134</td>\n    </tr>\n    <tr>\n      <th>649</th>\n      <td>Zika Outbreak in Wichita Falls</td>\n      <td>NaN</td>\n      <td>Wichita Falls</td>\n      <td>US</td>\n      <td>33.91371</td>\n      <td>-98.49339</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
+    "collapsed": true,
+    "pycharm": {
+     "is_executing": true
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "import json\n",
     "import geonamescache\n",
@@ -24,6 +17,8 @@
     "import numpy as np\n",
     "import re\n",
     "import unidecode as unidecode\n",
+    "import matplotlib\n",
+    "%matplotlib inline\n",
     "\n",
     "\n",
     "def get_headlines(source):\n",
@@ -54,7 +49,8 @@
     "    city['name']: {\n",
     "        'countrycode': city.get('countrycode'),\n",
     "        'lat': float(city['latitude']),\n",
-    "        'lon': float(city['longitude'])\n",
+    "        'lon': float(city['longitude']),\n",
+    "        'population': int(city['population']),\n",
     "    } for city in gc.get_cities().values()\n",
     "}\n",
     "\n",
@@ -93,31 +89,61 @@
     "data = pd.read_json('../data/headlines_cities_countries.json')\n",
     "data = data.replace({None: np.nan})\n",
     "data.head()\n",
-    "\n",
-    "# add city countrycode, latitude and longitude\n",
-    "def get_country_code(cities):\n",
-    "    return country_code_lat_lang.get(cities, {}).get('countrycode')\n",
-    "\n",
-    "def get_latitude(cities):\n",
-    "    return country_code_lat_lang.get(cities, {}).get('lat')\n",
-    "\n",
-    "def get_longitude(cities):\n",
-    "    return country_code_lat_lang.get(cities, {}).get('lon')\n",
-    "\n",
-    "data.columns\n",
-    "data['countrycode'] = data['cities'].apply(get_country_code)\n",
-    "data['latitude'] = data['cities'].apply(get_latitude)\n",
-    "\n",
-    "data['longitude'] = data['cities'].apply(get_longitude)\n",
-    "\n",
     "data = data.rename(columns=dict(countries='country',\n",
     "                                cities='city'))\n",
-    "data.tail()"
+    "data.describe()\n",
+    "\n",
+    "# see if any duplicates\n",
+    "print(data[\"headline\"].value_counts().sort_values().tail())\n",
+    "\n",
+    "print(f'There were {len(data)} total rows before dropping duplicates.')\n",
+    "# drop duplicates\n",
+    "data = data.drop_duplicates()\n",
+    "print(f'There were {len(data)} total rows before dropping duplicates.')\n",
+    "\n",
+    "data.info()\n",
+    "data.columns\n",
+    "# Exploratory plot\n",
+    "data['country'].value_counts()\n",
+    "\n",
+    "_ = data['country'].value_counts().plot.bar(title='Count of Countries')\n",
+    "# add city countrycode, latitude and longitude\n",
+    "def get_country_code(city):\n",
+    "    return country_code_lat_lang.get(city, {}).get('countrycode')\n",
+    "\n",
+    "def get_latitude(city):\n",
+    "    return country_code_lat_lang.get(city, {}).get('lat')\n",
+    "\n",
+    "def get_longitude(city):\n",
+    "    return country_code_lat_lang.get(city, {}).get('lon')\n",
+    "\n",
+    "def get_population(city):\n",
+    "    return country_code_lat_lang.get(city, {}).get('population')\n",
+    "\n",
+    "data['countrycode'] = data['city'].apply(get_country_code)\n",
+    "data['latitude'] = data['city'].apply(get_latitude)\n",
+    "\n",
+    "data['longitude'] = data['city'].apply(get_longitude)\n",
+    "data['population'] = data['city'].apply(get_population)\n",
+    "\n",
+    "print(f\"There are {data['country'].nunique()} different countries.\")\n",
+    "print(f\"There are {data['city'].nunique()} different cities.\")\n",
+    "\n",
+    "# 10 most common cities\n",
+    "data[\"city\"].value_counts().sort_values().tail(10)\n",
+    "_ = (\n",
+    "    data[\"city\"].value_counts().sort_values()\n",
+    "        .tail(10).plot.bar(title=\"10 most common cities.\")\n",
+    ")\n",
+    "\n",
+    "_ = data['city'].value_counts().plot.hist(\n",
+    "    title=\"distribution of city occurrences.\"\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "\n"
@@ -125,7 +151,8 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%%\n",
+     "is_executing": true
     }
    }
   }
